Tue Dec 21 00:19:50 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* Backported the fix at
	  Mon Oct  4 09:30:42 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/lib/openssl/bn.rb (Integer#to_bn): OpenSSL::BN.new
	  accepts only Strings, so call Integer#to_s(16).
	  16 is for an optimization. [ruby-dev:42336]

Sat Dec 11 05:48:28 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/multi-tk.rb: infinite loop on method_missing at loading
	  (backport from Ruby 1.9).

	* ext/tk/lib/multi-tk.rb: when no eventloop is running, ruby freezes at exit.

Fri Dec  3 19:48:11 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (check_sizeof): should return integer always.

Wed Dec  1 22:05:32 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* numeric.c (Init_Numeric): fixed a potential bug when using bccwin32
	  ruby with Microsoft's dll. [ruby-core:33503]

Sat Nov 27 08:42:01 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/extconf.rb, ext/iconv/charset_alias.rb: use RbConfig.

Fri Nov 26 10:09:09 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (WARNFLAGS): shut up the meaningless warnings of
	  Japanese version of VC.

Fri Nov 26 10:08:24 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* re.c (rb_reg_regcomp): should succeed the taint status from the
	  origin. [ruby-core:33338]

Wed Nov 24 15:44:11 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/extconf.rb (getaddrinfo): should initialize winsock on
	  windows.

Wed Nov 24 13:55:21 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/setup.mak: use findstr.exe instead of find.exe, because all
	  target build platforms should have findstr.exe, and, find.exe often
	  means another command such as cygwin's.

Mon Nov 22 14:13:45 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: fix checking version of GCC.

Mon Nov 22 14:13:45 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: NONAMELESSUNION defined only if gcc